overflow of div resolved

--- a/style.css
+++ b/style.css
@@ -21,10 +21,7 @@
   height: 400px;
   background-color: #fff;
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  
   margin: auto;
   max-width: 100%;
   max-height: 100%;
